# ccrma-clap-workshop-2026

./: .gitignore  README.md
01_generator/c/: CMakeLists.txt  plugin.c
01_generator/cpp/: CMakeLists.txt
01_generator/jai/: README.md  build_clap.jai  plugin.jai
01_generator/rust/: Cargo.toml  README.md  plugin.rs
01_generator/rust/xtask/: Cargo.toml  main.rs
01_generator_reference/cpp/: README.md  plugin.cpp
01_generator_reference/jai/: plugin.jai
02_filters/c/: CMakeLists.txt  plugin.c
02_filters/cpp/: README.md  plugin.cpp
02_filters/jai/: build_clap.jai  plugin.jai
02_filters/rust/: Cargo.toml  plugin.rs
02_filters/rust/xtask/: main.rs
02_filters_reference/cpp/: CMakeLists.txt  plugin.cpp
02_filters_reference/jai/: README.md  plugin.jai
03_distortion/c/: CMakeLists.txt  plugin.c
03_distortion/cpp/: CMakeLists.txt  plugin.cpp
03_distortion/jai/: build_clap.jai  plugin.jai
03_distortion/rust/: Cargo.toml  plugin.rs
03_distortion/rust/xtask/: main.rs
03_distortion_reference/cpp/: README.md  plugin.cpp
03_distortion_reference/jai/: README.md  plugin.jai
04_dynamics/c/: CMakeLists.txt  README.md  plugin.c
04_dynamics/cpp/: plugin.cpp
04_dynamics/jai/: build_clap.jai  plugin.jai
04_dynamics/rust/: Cargo.toml  plugin.rs
04_dynamics/rust/xtask/: main.rs
04_dynamics_reference/cpp/: CMakeLists.txt  plugin.cpp
04_dynamics_reference/jai/: README.md  build_clap.jai  plugin.jai
05_delay/cpp/: CMakeLists.txt  README.md  plugin.cpp
05_delay/rust/: Cargo.toml  plugin.rs
05_delay/rust/xtask/: main.rs
05_delay_reference/cpp/: plugin.cpp
applause_example/: README.txt
gui_example/cpp/: CMakeLists.txt  README.md  editor.h  plugin.cpp
helpers/: package_clap.cmake
self-contained-clap-template/: CMakeLists.txt  README.md  plugin.cpp
slides/: delay_slides.html
slides/visualizers/: 01-sampling.html  01-transfer-curve.html  02-building-blocks.html  02-harmonics.html  03-imperfection-decomposer.html  04-aliasing.html
