[workspace]
members  = ["xtask"]
resolver = "2"

[workspace.package]
version = "1.0.0"

[package]
name    = "multiband-distortion-plugin"
version.workspace = true
edition = "2021"

[lib]
name       = "multiband_distortion_plugin"
crate-type = ["cdylib"]
path       = "plugin.rs"

[dependencies]
clap-sys = "0.5"

# A Rust panic trying to unwind through a C stack frame is undefined behaviour
# and will crash the host. Abort immediately instead.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
